--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hooks-helper": "^1.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
